3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix bug #1668283: Crossfire.CreateObjectByName is faulty, by applying
 patch (feature request) #1682802: CreateObjectByName fix/change.
 Code by Yann Chackhoff.
Also fix a crash when teleporting a newly created object.
 server/plugins.c
---
Fix bug #1671102: Generic destroy can remove permanent buttons. The code was
 doing a wrong check related to marked item/destroyer.
Fix bug #1657675: multi-tile buildable object bug (note: one .x11 image though).
 code now uses multi-tile aware function to generate object, and correctly
 checks all relevant spots for building.
 server/build_map.c
Nicolas Weeger 2007-03-17

Fix bug #1673713: event_attack in (sword etc) weapon doesn't work.
 server/attack.c: fix EVENT_ATTACK weirdness.
 ---
Implement feature request #1560416: give warning when spell is about to expire.
Player will be warned when left duration is one fifth, then one twenty-fifth.
Two new functions are introduced, check_spell_expiry() and store_spell_expiry().
 include/sproto.h
 server/spell_effect.c spell_util.c time.c
---
Implement feature request #1675158: dmhide - "detect monster" will reveal DM.
 spell_effect.c: detection doesn't concern DMs.
Ryo 2007-03-06

Add Object.Owner (read/write) and Crossfire.GetFriendlyList.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_object.c
---
Add cf_friendlylist_get_first / cf_friendlylist_get_next to browser friendlylist.
Add cf_object_set_object_property.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Give access to friendlylist to plugins, through cfapi_friendlylist_get_next().